Change topics and add Hochzeits ABC

--- a/index.html
+++ b/index.html
@@ -1,47 +1,50 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta property="og:image" content="http://www.thiza.org/public/img/home.jpg">
-		<meta property="og:title" content="Magdalena und Tobias">
-		<meta property="og:description" content="Get ready for the Polish Wedding!">
-		<title>Magdalena und Tobias</title>
-		<link rel="shortcut icon" type="image/png" href="public/img/fav.png">
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-		<link href="https://fonts.googleapis.com/css?family=Julius+Sans+One|Unica+One" rel="stylesheet">
-		<link rel="stylesheet" style="text/css" href="public/stylesheets/style.css"/>
-		
-	</head>
+
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta property="og:image" content="http://www.thiza.org/public/img/home.jpg">
+	<meta property="og:title" content="Magdalena und Tobias">
+	<meta property="og:description" content="Get ready for the Polish Wedding!">
+	<title>Magdalena und Tobias</title>
+	<link rel="shortcut icon" type="image/png" href="public/img/fav.png">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+		integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Julius+Sans+One|Unica+One" rel="stylesheet">
+	<link rel="stylesheet" style="text/css" href="public/stylesheets/style.css" />
+</head>
+
 <body>
 
 	<nav class="navbar navbar-expand-sm navbar-light" id="myNav">
-		 <a class="navbar-brand d-sm-none" href="#home">Magdalena & Tobi 6th Juli</a>
-  		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    		<span class="navbar-toggler-icon"></span>
-  		</button>
-		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-		    <ul class="navbar-nav mr-auto">
-		      <li class="nav-item">
-		        <a class="nav-link d-none d-sm-inline-block" href="#home">Home</a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="#welcome-page">Willkommen</a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="#agenda">Ablauf</a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="#travel">Anreise</a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="#hotels">Übernachtung</a>
-		      </li>
-		    </ul>
-		  </div>
+		<a class="navbar-brand d-sm-none" href="#home">Magdalena & Tobi 6th Juli</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+			aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item">
+					<a class="nav-link d-none d-sm-inline-block" href="#home">Home</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#welcome-page">Willkommen</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#agenda">Ablauf</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#travel">Anreise & Übernachtung</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#hotels">Hochzeit's ABC</a>
+				</li>
+			</ul>
+		</div>
 	</nav>
 
-	<div id="home" class="container-fluid">	
+	<div id="home" class="container-fluid">
 	</div>
 
 	<div id="welcome-page" class="container-fluid">
@@ -49,7 +52,8 @@
 			<h1>Liebe Familie und Freunde,</h1>
 			<br>
 			<p>Herzlich Willkommen auf der Homepage unserer Hochzeit!</p>
-			<p>Hier findet ihr alle Informationen, die helfen sollen, dass eure Teilnahme an unserem großen Tag so angenehm wie möglich ist.</p>
+			<p>Hier findet ihr alle Informationen, die helfen sollen, dass eure Teilnahme an unserem großen Tag so angenehm
+				wie möglich ist.</p>
 			<p>Hier erfahrt ihr alles rund um die Themen Anreise, Schlafen, Ablauf und noch vieles mehr.</p>
 			<p>Falls immer noch nicht alle Fragen geklärt sein sollten, zögert nicht uns anzusprechen.</p>
 			<p>Wir freuen uns auch Euch!</p>
@@ -59,114 +63,163 @@
 	</div>
 
 	<div id="parallax"></div>
-	
-	<div id="agenda" class="container-fluid">
-			<div class="row">
-				<div class="col-12 col-md-7" id="agenda-part">
-					<div class="agenda-day" >
-						<h1>Freitag, 05. Juli - Tag der Anreise</h1>
-						<ul>
-							<li>Tobias wird in Działdowo sein und bereits dort übernachten.</li>
-							<li>Das heißt, dass jemand vor Ort sein wird, egal wann ihr ankommt.</li>
-						</ul>
-					</div>
-					<div class="agenda-day">
-						<h1>Samstag, 06.Juli – Der große Tag</h1>
-							<ul>
-								<li>16 Uhr – Trauung in der Kirche St. Bartlomieja in Kuczbork</li>
-									<br>
-								<li>18 Uhr – Beginn der Feier in Palac Slubów DOMINO in Kormoniki</li>
-							</ul>
-					</div>
-					<div class="agenda-day">
-						<h1>Sonntag, 07.Juli – Die Feier geht weiter</h1>
-							<ul>
-								<li>13 Uhr – Poprawiny (Nachfeier)</li>
-									<ul>
-										<li>Verlängern wir die Feier und genießen gemeinsam die Überbleibsel vom Vortag!</li>
-									</ul>
-							</ul>
-					</div> 
-				</div>
 
-				<div id="agenda-pic" class="d-none d-md-inline-block col-md-5">
+	<div id="agenda" class="container-fluid">
+		<div class="row">
+			<div class="col-12 col-md-7" id="agenda-part">
+				<div class="agenda-day">
+					<h1>Freitag, 05. Juli - Tag der Anreise</h1>
+					<ul>
+						<li>Tobias wird in Działdowo sein und bereits dort übernachten.</li>
+						<li>Das heißt, dass jemand vor Ort sein wird, egal wann ihr ankommt.</li>
+					</ul>
 				</div>
-		</div>		
+				<div class="agenda-day">
+					<h1>Samstag, 06.Juli – Der große Tag</h1>
+					<ul>
+						<li>16 Uhr – Trauung in der Kirche St. Bartlomieja in Kuczbork</li>
+						<br>
+						<li>18 Uhr – Beginn der Feier in Palac Slubów DOMINO in Kormoniki</li>
+					</ul>
+				</div>
+				<div class="agenda-day">
+					<h1>Sonntag, 07.Juli – Die Feier geht weiter</h1>
+					<ul>
+						<li>13 Uhr – Poprawiny (Nachfeier)</li>
+						<ul>
+							<li>Verlängern wir die Feier und genießen gemeinsam die Überbleibsel vom Vortag!</li>
+						</ul>
+					</ul>
+				</div>
+			</div>
+
+			<div id="agenda-pic" class="d-none d-md-inline-block col-md-5">
+			</div>
+		</div>
 	</div>
-	
-<div id="parallaxM"></div>	
+
+	<div id="parallaxM"></div>
 
 	<div id="travel" class="container-fluid">
 		<div id="travel-text" class="container px-md-5">
 			<h1>Anreise</h1>
 			<p>Der einfachste Anreiseweg ist mit dem Auto. Einfach den Namen des Ziels in das Navi eingeben und
-					die Fahrt kann losgehen. Es besteht ebenso die Möglichkeit mit dem Flugzeug und/oder der Bahn
-					anzukommen. </p>
-					<p>Die nahegelegensten Flughäfen sind in Warschau und Danzig. Von dort ist es am
-					einfachsten einen Direktzug nach Działdowo zu nehmen. In Działdowo können wir gern eine
-					Abholmöglichkeit vom Bahnhof organisieren.</p>
-			
+				die Fahrt kann losgehen. Es besteht ebenso die Möglichkeit mit dem Flugzeug und/oder der Bahn
+				anzukommen. </p>
+			<p>Die nahegelegensten Flughäfen sind in Warschau und Danzig. Von dort ist es am
+				einfachsten einen Direktzug nach Działdowo zu nehmen. In Działdowo können wir gern eine
+				Abholmöglichkeit vom Bahnhof organisieren.</p>
 		</div>
-		<div id="travel-step-container" class="container">	
-			<div class="travel-step">
-				<ul> <h5>From Warsaw Chopin Airport (Okecie) to Bialystok (Dworzc Biacomex - Central Station):</h5>
-					<li><a href="https://plusbus.pl/r_auto.php?z=7&do=1&data=2017-04-01" target="_blank">PlusBus</a></li>
-					<li><a href="https://zakexpress.pl/images/rozklad%20jazdy/Bialysto_Warszawa.jpg" target="_blank">ZakExpress</a></li>
-				</ul>
-			</div>
-			<div class="travel-step">
-				<ul> <h5>From Bialystok (Dworzc Biacomex - Central Station) to Sokolka:</h5>
-					<li><a href="https://www.e-podroznik.pl/1783,23672,42598,rozklad-jazdy-pks-bialystok-sokolka.html" target="_blank">by bus</a></li>
-					<li><a href="https://rozklad-pkp.pl/en" target="_blank">by train</a></li>
-				</ul>
-			</div>
-			<div class="travel-step">
-				<ul> <h5>Getting around in Sokolka:</h5>
-					<li>Taxi:
-						<ul>
-							<li>+48 85 711 82 02</li>
-							<li>+48 85 711 41 43</li>
-							<li>+48 85 711 21 66</li>
-						</ul>
-					</li>
-					<li>walking :)</li>
-				</ul>
-			</div>
+		<div id="travel-text" class="container px-md-5">
+			<h1>Übernachtung</h1>
+			<p>Wir haben bereits Zimmer von Freitag bis Montag vorgebucht, die ihr natürlich nutzen könnt und
+				preislich im Rahmen liegen. Bitte sagt uns Bescheid, falls ihr diese Möglichkeit nutzen möchtet.</p>
+		</div>
+		<div id="travel-step-container" class="container">
+			<img id='kissingCouple' src="./public/img/dress.jpg" alt="kising couple">
 		</div>
 	</div>
 
 	<div id="parallax2"></div>
 
 	<div id="hotels" class="container-fluid">
-		
+
 		<div id="hotels-text-container" class="container px-2 px-md-5">
-			<h1>Übernachtung</h1>
-			<p>Wir haben bereits Zimmer von Freitag bis Montag vorgebucht, die ihr natürlich nutzen könnt und
-					preislich im Rahmen liegen. Bitte sagt uns Bescheid, falls ihr diese Möglichkeit nutzen möchtet.</p>
-			
-		</div>
+			<h1>Hochzeits-ABC</h1>
+			<h5>A wie Aufräumen</h5>
+			<p>Eure Aufgabe wird es sein, die Feier so gut wie möglich auszukosten. Um den Rest kümmern wir uns.</p>
+			<h5>B wie Brauchtümer</h5>
+			<p>Sicherlich wird es das eine oder andere geben, was ihr noch nicht kennt. Lasst euch einfach überraschen und
+				macht bei allem mit.</p>
+			<h5>C wie Carpe Diem!</h5>
+			<p>Nutze den Tag!</p>
+			<h5>D wie Dresscode</h5>
+			<p>Üblicherweise kleidet man sich festlich. Weiß ist für die Braut reserviert.</p>
+			<h5>E wie Entertainment</h5>
+			<p>Es wird eine Musikgruppe geben, die mit Musik und kleinen Spielen durch den Abend führen wird. Wer etwas zur
+				Unterhaltung beitragen möchte, kann das natürlich gern tun. Sagt uns bitte Bescheid, wenn ihr etwas plant. Die
+				Musik versuchen wir so zu gestalten, dass für jeden etwas dabei ist. </p>
+			<h5>F wie Fotograph</h5>
+			<p>Es wird einen professionellen Fotographen geben, der sowohl die Trauung als auch die Feier bis spät in die
+				Nacht begleitet. Wer selbst gern Fotos machen möchte, kann dies natürlich tun.</p>
+			<h5>G wie Getränke</h5>
+			<p>Wir werden eine breite Auswahl an Getränken zur Verfügung stellen. Dabei ist es üblich, dass die Getränke auf
+				dem Tisch stehen und sich jeder selbst bedient. Für genug Nachschub wird gesorgt sein.</p>
+			<h5>H wie Hochzeitstanz</h5>
+			<p>Der Eröffnungstanz findet gleich zu Beginn der Feier statt, bevor alle sich auf ihren Plätzen einfinden. </p>
+			<h5>I wie International</h5>
+			<p>Die Gäste sind bunt gemischt und kommen aus vielen Ländern. Habt keine Scheu vor sprachlichen Barrieren –
+				spätestens nach einigen Anstoßrunden sollte dies kein Problem mehr darstellen.</p>
+			<h5>J wie „Jeszcze raz, jeszcze raz“</h5>
+			<p>Das heißt so viel wie „noch einmal, noch einmal”. Das rufen die Gäste im Chor bei dem Lied „Sto lat“, welches
+				sicherlich nicht nur einmal im Laufe des Abends erklingen wird.</p>
+			<h5>K wie Kirche</h5>
+			<p>Die kirchliche Trauung findet in Kuczbork statt (etwa 30 Minuten von Działdowo). Ihr werdet wahrscheinlich
+				nicht alles verstehen, aber die entscheidenden Momente werdet ihr bestimmt erkennen </p>
+			<h5>L wie Lust und Laune</h5>
+			<p>Wir hoffen, dass ihr diese beiden Dinge mitbringt und wir einen unvergesslichen Tag mit euch haben.</p>
+			<h5>M wie Mahlzeiten</h5>
+			<p>Wird es viele geben. Es wird sechs Gänge geben, die im Laufe des Abends und auch noch spätnachts serviert
+				werden. Hungern sollte also niemand. Damit ihr auch wisst, was ihr dort esst, wird ein Menü auf Deutsch auf dem
+				Tisch liegen.</p>
+			<h5>N wie „Nie rozumiem!“</h5>
+			<p>Das heißt „Ich verstehe nicht“. Kommunizieren kann man aber auch mit Händen und Füßen. Tipp: Deutsche Sätze
+				noch einmal langsam und laut zu wiederholen hilft dem Gegenüber leider nur selten beim Verstehen </p>
+			<h5>O wie Open End</h5>
+			<p>Es wird kein offizielles Ende geben. Die Feier ist erst zu Ende, wenn der letzte geht.</p>
+			<h5>P wie Pausen</h5>
+			<p>Sollte man (vor allem beim Trinken) einplanen. Die Nacht wird sehr lang sein, sodass einige Gläser Wasser
+				zwischendurch für ein besseres Durchhaltevermögen sorgen.</p>
+			<h5>Q wie Quartier</h5>
+			<p>Wir sind sicher, dass wir für alle einen Schlafplatz organisieren können, sodass ihr euch darüber nicht allzu
+				viele Sorgen machen braucht.</p>
+			<h5>R wie Rückweg</h5>
+			<p>Die meisten von euch werden in der Nähe der Feier ihren Schlafplatz haben. Wir werden uns darum kümmern, dass
+				ihr gesund und sicher dorthin kommt.</p>
+			<h5>S wie Sitzordnung</h5>
+			<p>Wird es zumindest am Anfang geben und ist durch kleine Kärtchen sichtbar. Wir würden uns aber freuen, wenn sich
+				alles im Laufe des Abends ein wenig durchmischt.</p>
+			<h5>T wie Trauzeugen</h5>
+			<p>Wir haben jeweils drei weibliche und männliche Trauzeugen, die helfen können, falls ihr Fragen habt. Ihr könnt
+				uns aber auch fragen.</p>
+			<h5>U wie Überraschung</h5>
+			<p>Wir freuen uns über jede Überraschung.</p>
+			<h5>V wie Vorfreude</h5>
+			<p>Wir freuen uns jeden Tag mehr mit euch an diesem Tag feiern zu können.</p>
+			<h5>W wie Wiejski stół</h5>
+			<p>Eine polnische Hochzeitstradition. Auf diesem Tisch wird es typische Spezialitäten wie selbstgemachte Wurst,
+				eingelegte Gurken, Schmalz oder selbstgebrannten Schnaps geben. Greift zu, wenn ihr in der Nähe seid!</p>
+			<h5>X wie XY- Ungelöst</h5>
+			<p>Falls ihr Fragen habet, zögert nicht, sie zu stellen.</p>
+			<h5>Y wie Y</h5>
+			<p>Der 25.Buchstabe des deutschen und des polnischen Alphabets. Also wenn das kein Schicksal ist…</p>
+			<h5>Z wie Zwölf Stunden</h5>
+			<p>Eine durchschnittliche Hochzeitsfeier in Polen dauert zwölf Stunden…</p>
 
-		
 
 		</div>
-		
 	</div>
-		
+	<footer class="py-3">
+		by Izabela 2019
+	</footer>
 
-<footer class="py-3">
- by Izabela 2019
-</footer>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+		integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+		crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+		integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+		crossorigin="anonymous"></script>
+	<script>
+		$(document).ready(function () {
+			$(".navbar-nav li a").click(function (event) {
+				$(".navbar-collapse").collapse('hide');
+			});
+		});
+	</script>
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-<script>
-	$(document).ready(function () {
-  $(".navbar-nav li a").click(function(event) {
-    $(".navbar-collapse").collapse('hide');
-  });
-});
-</script>
-	
 </body>
+
 </html>
