Add picture in ABC

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<a class="nav-link" href="#travel">Anreise & Übernachtung</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#hotels">Hochzeit's ABC</a>
+					<a class="nav-link" href="#abc">Hochzeit's ABC</a>
 				</li>
 			</ul>
 		</div>
@@ -110,21 +110,22 @@
 				einfachsten einen Direktzug nach Działdowo zu nehmen. In Działdowo können wir gern eine
 				Abholmöglichkeit vom Bahnhof organisieren.</p>
 		</div>
+		<div id="travel-step-container" class="container">
+			<img id='dress' src="./public/img/dress.jpg" alt="dress">
+		</div>
 		<div id="travel-text" class="container px-md-5">
 			<h1>Übernachtung</h1>
 			<p>Wir haben bereits Zimmer von Freitag bis Montag vorgebucht, die ihr natürlich nutzen könnt und
 				preislich im Rahmen liegen. Bitte sagt uns Bescheid, falls ihr diese Möglichkeit nutzen möchtet.</p>
 		</div>
-		<div id="travel-step-container" class="container">
-			<img id='kissingCouple' src="./public/img/dress.jpg" alt="kising couple">
-		</div>
+		
 	</div>
 
 	<div id="parallax2"></div>
 
-	<div id="hotels" class="container-fluid">
+	<div id="abc" class="container-fluid">
 
-		<div id="hotels-text-container" class="container px-2 px-md-5">
+		<div id="abc-text-container" class="container px-2 px-md-5">
 			<h1>Hochzeits-ABC</h1>
 			<h5>A wie Aufräumen</h5>
 			<p>Eure Aufgabe wird es sein, die Feier so gut wie möglich auszukosten. Um den Rest kümmern wir uns.</p>
@@ -170,6 +171,7 @@
 			<h5>P wie Pausen</h5>
 			<p>Sollte man (vor allem beim Trinken) einplanen. Die Nacht wird sehr lang sein, sodass einige Gläser Wasser
 				zwischendurch für ein besseres Durchhaltevermögen sorgen.</p>
+				<img id='original' src="./public/img/primary.jpg" alt="original pic">
 			<h5>Q wie Quartier</h5>
 			<p>Wir sind sicher, dass wir für alle einen Schlafplatz organisieren können, sodass ihr euch darüber nicht allzu
 				viele Sorgen machen braucht.</p>
@@ -199,6 +201,7 @@
 
 		</div>
 	</div>
+	
 	<footer class="py-3">
 		by Izabela 2019
 	</footer>
