Style picutres, add two more

--- a/index.html
+++ b/index.html
@@ -109,9 +109,7 @@
 			<p>Die nahegelegensten Flughäfen sind in Warschau und Danzig. Von dort ist es am
 				einfachsten einen Direktzug nach Działdowo zu nehmen. In Działdowo können wir gern eine
 				Abholmöglichkeit vom Bahnhof organisieren.</p>
-		</div>
-		<div id="travel-step-container" class="container">
-			<img id='dress' src="./public/img/dress.jpg" alt="dress">
+				<img id='dress' src="./public/img/dress.jpg" alt="dress">
 		</div>
 		<div id="travel-text" class="container px-md-5">
 			<h1>Übernachtung</h1>
@@ -171,7 +169,9 @@
 			<h5>P wie Pausen</h5>
 			<p>Sollte man (vor allem beim Trinken) einplanen. Die Nacht wird sehr lang sein, sodass einige Gläser Wasser
 				zwischendurch für ein besseres Durchhaltevermögen sorgen.</p>
+				<img id='original' src="./public/img/gray.jpg" alt="original pic">
 				<img id='original' src="./public/img/primary.jpg" alt="original pic">
+				<img id='original' src="./public/img/home.jpg" alt="original pic">
 			<h5>Q wie Quartier</h5>
 			<p>Wir sind sicher, dass wir für alle einen Schlafplatz organisieren können, sodass ihr euch darüber nicht allzu
 				viele Sorgen machen braucht.</p>
