Change Tobias name

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta property="og:image" content="http://www.thiza.org/public/img/home.jpg">
 	<meta property="og:title" content="Magdalena und Tobias">
-	<meta property="og:description" content="Get ready for the Polish Wedding!">
+	<meta property="og:description" content="Wir heiraten!">
 	<title>Magdalena und Tobias</title>
 	<link rel="shortcut icon" type="image/png" href="public/img/fav.png">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -18,7 +18,7 @@
 <body>
 
 	<nav class="navbar navbar-expand-sm navbar-light" id="myNav">
-		<a class="navbar-brand d-sm-none" href="#home">Magdalena & Tobi 6th Juli</a>
+		<a class="navbar-brand d-sm-none" href="#home">Magdalena & Tobias 6th Juli</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 			aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
