--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
 				<div class="agenda-day">
 					<h1>Freitag, 05. Juli - Tag der Anreise</h1>
 					<ul>
-						<li>Tobias wird in Działdowo sein und bereits dort übernachten.</li>
+						<li>Tobias wird in <a href="https://goo.gl/maps/9FLZSeyBxq72" target="_blank">Działdowo</a> sein und bereits dort übernachten.</li>
 						<li>Das heißt, dass jemand vor Ort sein wird, egal wann ihr ankommt.</li>
 					</ul>
 				</div>
 				<div class="agenda-day">
 					<h1>Samstag, 06.Juli – Der große Tag</h1>
 					<ul>
-						<li>16 Uhr – Trauung in der Kirche St. Bartlomieja in Kuczbork</li>
+						<li>16 Uhr – Trauung in <a href='https://goo.gl/maps/e14MK8E9sNv' target="_blank">der Kirche St. Bartlomieja in Kuczbork</a></li>
 						<br>
-						<li>18 Uhr – Beginn der Feier in Palac Slubów DOMINO in Kormoniki</li>
+						<li>18 Uhr – Beginn der Feier in <a href='https://goo.gl/maps/wqnNJYCmaTN2' target="_blank">Palac Slubów DOMINO in Kormoniki</a></li>
 					</ul>
 				</div>
 				<div class="agenda-day">
