Add bold letters

--- a/index.html
+++ b/index.html
@@ -125,77 +125,77 @@
 
 		<div id="abc-text-container" class="container px-2 px-md-5">
 			<h1>Hochzeits-ABC</h1>
-			<h5>A wie Aufräumen</h5>
+			<h5><strong>A</strong> wie Aufräumen</h5>
 			<p>Eure Aufgabe wird es sein, die Feier so gut wie möglich auszukosten. Um den Rest kümmern wir uns.</p>
-			<h5>B wie Brauchtümer</h5>
+			<h5><strong>B</strong> wie Brauchtümer</h5>
 			<p>Sicherlich wird es das eine oder andere geben, was ihr noch nicht kennt. Lasst euch einfach überraschen und
 				macht bei allem mit.</p>
-			<h5>C wie Carpe Diem!</h5>
+			<h5><strong>C</strong> wie Carpe Diem!</h5>
 			<p>Nutze den Tag!</p>
-			<h5>D wie Dresscode</h5>
+			<h5><strong>D</strong> wie Dresscode</h5>
 			<p>Üblicherweise kleidet man sich festlich. Weiß ist für die Braut reserviert.</p>
-			<h5>E wie Entertainment</h5>
+			<h5><strong>E</strong> wie Entertainment</h5>
 			<p>Es wird eine Musikgruppe geben, die mit Musik und kleinen Spielen durch den Abend führen wird. Wer etwas zur
 				Unterhaltung beitragen möchte, kann das natürlich gern tun. Sagt uns bitte Bescheid, wenn ihr etwas plant. Die
 				Musik versuchen wir so zu gestalten, dass für jeden etwas dabei ist. </p>
-			<h5>F wie Fotograph</h5>
+			<h5><strong>F</strong> wie Fotograph</h5>
 			<p>Es wird einen professionellen Fotographen geben, der sowohl die Trauung als auch die Feier bis spät in die
 				Nacht begleitet. Wer selbst gern Fotos machen möchte, kann dies natürlich tun.</p>
-			<h5>G wie Getränke</h5>
+			<h5><strong>G</strong> wie Getränke</h5>
 			<p>Wir werden eine breite Auswahl an Getränken zur Verfügung stellen. Dabei ist es üblich, dass die Getränke auf
 				dem Tisch stehen und sich jeder selbst bedient. Für genug Nachschub wird gesorgt sein.</p>
-			<h5>H wie Hochzeitstanz</h5>
+			<h5><strong>H</strong> wie Hochzeitstanz</h5>
 			<p>Der Eröffnungstanz findet gleich zu Beginn der Feier statt, bevor alle sich auf ihren Plätzen einfinden. </p>
-			<h5>I wie International</h5>
+			<h5><strong>I</strong> wie International</h5>
 			<p>Die Gäste sind bunt gemischt und kommen aus vielen Ländern. Habt keine Scheu vor sprachlichen Barrieren –
 				spätestens nach einigen Anstoßrunden sollte dies kein Problem mehr darstellen.</p>
-			<h5>J wie „Jeszcze raz, jeszcze raz“</h5>
+			<h5><strong>J</strong> wie „Jeszcze raz, jeszcze raz“</h5>
 			<p>Das heißt so viel wie „noch einmal, noch einmal”. Das rufen die Gäste im Chor bei dem Lied „Sto lat“, welches
 				sicherlich nicht nur einmal im Laufe des Abends erklingen wird.</p>
-			<h5>K wie Kirche</h5>
+			<h5><strong>K</strong> wie Kirche</h5>
 			<p>Die kirchliche Trauung findet in Kuczbork statt (etwa 30 Minuten von Działdowo). Ihr werdet wahrscheinlich
 				nicht alles verstehen, aber die entscheidenden Momente werdet ihr bestimmt erkennen </p>
-			<h5>L wie Lust und Laune</h5>
+			<h5><strong>L</strong> wie Lust und Laune</h5>
 			<p>Wir hoffen, dass ihr diese beiden Dinge mitbringt und wir einen unvergesslichen Tag mit euch haben.</p>
-			<h5>M wie Mahlzeiten</h5>
+			<h5><strong>M</strong> wie Mahlzeiten</h5>
 			<p>Wird es viele geben. Es wird sechs Gänge geben, die im Laufe des Abends und auch noch spätnachts serviert
 				werden. Hungern sollte also niemand. Damit ihr auch wisst, was ihr dort esst, wird ein Menü auf Deutsch auf dem
 				Tisch liegen.</p>
-			<h5>N wie „Nie rozumiem!“</h5>
+			<h5><strong>N</strong> wie „Nie rozumiem!“</h5>
 			<p>Das heißt „Ich verstehe nicht“. Kommunizieren kann man aber auch mit Händen und Füßen. Tipp: Deutsche Sätze
 				noch einmal langsam und laut zu wiederholen hilft dem Gegenüber leider nur selten beim Verstehen </p>
-			<h5>O wie Open End</h5>
+			<h5><strong>O</strong> wie Open End</h5>
 			<p>Es wird kein offizielles Ende geben. Die Feier ist erst zu Ende, wenn der letzte geht.</p>
-			<h5>P wie Pausen</h5>
+			<h5><strong>P</strong> wie Pausen</h5>
 			<p>Sollte man (vor allem beim Trinken) einplanen. Die Nacht wird sehr lang sein, sodass einige Gläser Wasser
 				zwischendurch für ein besseres Durchhaltevermögen sorgen.</p>
 				<img id='original' src="./public/img/gray.jpg" alt="original pic">
 				<img id='original' src="./public/img/primary.jpg" alt="original pic">
 				<img id='original' src="./public/img/home.jpg" alt="original pic">
-			<h5>Q wie Quartier</h5>
+			<h5><strong>Q</strong> wie Quartier</h5>
 			<p>Wir sind sicher, dass wir für alle einen Schlafplatz organisieren können, sodass ihr euch darüber nicht allzu
 				viele Sorgen machen braucht.</p>
-			<h5>R wie Rückweg</h5>
+			<h5><strong>R</strong> wie Rückweg</h5>
 			<p>Die meisten von euch werden in der Nähe der Feier ihren Schlafplatz haben. Wir werden uns darum kümmern, dass
 				ihr gesund und sicher dorthin kommt.</p>
-			<h5>S wie Sitzordnung</h5>
+			<h5><strong>S</strong> wie Sitzordnung</h5>
 			<p>Wird es zumindest am Anfang geben und ist durch kleine Kärtchen sichtbar. Wir würden uns aber freuen, wenn sich
 				alles im Laufe des Abends ein wenig durchmischt.</p>
-			<h5>T wie Trauzeugen</h5>
+			<h5><strong>T</strong> wie Trauzeugen</h5>
 			<p>Wir haben jeweils drei weibliche und männliche Trauzeugen, die helfen können, falls ihr Fragen habt. Ihr könnt
 				uns aber auch fragen.</p>
-			<h5>U wie Überraschung</h5>
+			<h5><strong>U</strong> wie Überraschung</h5>
 			<p>Wir freuen uns über jede Überraschung.</p>
-			<h5>V wie Vorfreude</h5>
+			<h5><strong>V</strong> wie Vorfreude</h5>
 			<p>Wir freuen uns jeden Tag mehr mit euch an diesem Tag feiern zu können.</p>
-			<h5>W wie Wiejski stół</h5>
+			<h5><strong>W</strong> wie Wiejski stół</h5>
 			<p>Eine polnische Hochzeitstradition. Auf diesem Tisch wird es typische Spezialitäten wie selbstgemachte Wurst,
 				eingelegte Gurken, Schmalz oder selbstgebrannten Schnaps geben. Greift zu, wenn ihr in der Nähe seid!</p>
-			<h5>X wie XY- Ungelöst</h5>
+			<h5><strong>X</strong> wie XY- Ungelöst</h5>
 			<p>Falls ihr Fragen habet, zögert nicht, sie zu stellen.</p>
-			<h5>Y wie Y</h5>
+			<h5><strong>Y</strong> wie Y</h5>
 			<p>Der 25.Buchstabe des deutschen und des polnischen Alphabets. Also wenn das kein Schicksal ist…</p>
-			<h5>Z wie Zwölf Stunden</h5>
+			<h5><strong>Z</strong> wie Zwölf Stunden</h5>
 			<p>Eine durchschnittliche Hochzeitsfeier in Polen dauert zwölf Stunden…</p>
 
 
