Change miniature pic

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta property="og:image" content="http://www.thiza.org/public/img/home.jpg">
+	<meta property="og:image" content="http://www.magdatobi.life/public/img/home.jpg">
 	<meta property="og:title" content="Magdalena und Tobias">
 	<meta property="og:description" content="Wir heiraten!">
 	<title>Magdalena und Tobias</title>
