--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 					<a class="nav-link d-none d-sm-inline-block" href="#home">Home</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#welcome-page">Willkommen</a>
+					<a class="nav-link" href="#willkommen">Willkommen</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#agenda">Ablauf</a>
+					<a class="nav-link" href="#ablauf">Ablauf</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#travel">Anreise & Übernachtung</a>
@@ -47,7 +47,7 @@
 	<div id="home" class="container-fluid">
 	</div>
 
-	<div id="welcome-page" class="container-fluid">
+	<div id="willkommen" class="container-fluid">
 		<strong>
 			<h1>Liebe Familie und Freunde,</h1>
 			<br>
@@ -64,7 +64,7 @@
 
 	<div id="parallax"></div>
 
-	<div id="agenda" class="container-fluid">
+	<div id="ablauf" class="container-fluid">
 		<div class="row">
 			<div class="col-12 col-md-7" id="agenda-part">
 				<div class="agenda-day">
