--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta property="og:image" content="http://www.magdatobi.life/public/img/home.jpg">
+	<meta property="og:image" content="http://www.magdatobi.life/public/img/otiginal.jpg">
 	<meta property="og:title" content="Magdalena und Tobias">
 	<meta property="og:description" content="Wir heiraten!">
 	<title>Magdalena und Tobias</title>
@@ -171,7 +171,7 @@
 				zwischendurch für ein besseres Durchhaltevermögen sorgen.</p>
 				<img id='original' src="./public/img/gray.jpg" alt="original pic">
 				<img id='original' src="./public/img/primary.jpg" alt="original pic">
-				<img id='original' src="./public/img/home.jpg" alt="original pic">
+				<img id='original' src="./public/img/original.jpg" alt="original pic">
 			<h5><strong>Q</strong> wie Quartier</h5>
 			<p>Wir sind sicher, dass wir für alle einen Schlafplatz organisieren können, sodass ihr euch darüber nicht allzu
 				viele Sorgen machen braucht.</p>
