--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				wie möglich ist.</p>
 			<p>Hier erfahrt ihr alles rund um die Themen Anreise, Schlafen, Ablauf und noch vieles mehr.</p>
 			<p>Falls immer noch nicht alle Fragen geklärt sein sollten, zögert nicht uns anzusprechen.</p>
-			<p>Wir freuen uns auch Euch!</p>
+			<p>Wir freuen uns auf Euch!</p>
 			<p>Liebe Grüße,</p>
 			<p>Magdalena & Tobias</p>
 		</strong>
@@ -134,6 +134,7 @@
 			<p>Nutze den Tag!</p>
 			<h5><strong>D</strong> wie Dresscode</h5>
 			<p>Üblicherweise kleidet man sich festlich. Weiß ist für die Braut reserviert.</p>
+			<!-- <img id='single' src="./public/img/inlove.jpg" alt="in love"> -->
 			<h5><strong>E</strong> wie Entertainment</h5>
 			<p>Es wird eine Musikgruppe geben, die mit Musik und kleinen Spielen durch den Abend führen wird. Wer etwas zur
 				Unterhaltung beitragen möchte, kann das natürlich gern tun. Sagt uns bitte Bescheid, wenn ihr etwas plant. Die
@@ -149,6 +150,7 @@
 			<h5><strong>I</strong> wie International</h5>
 			<p>Die Gäste sind bunt gemischt und kommen aus vielen Ländern. Habt keine Scheu vor sprachlichen Barrieren –
 				spätestens nach einigen Anstoßrunden sollte dies kein Problem mehr darstellen.</p>
+				<!-- <img id='opacity' src="./public/img/schloss.jpg" alt="couple"> -->
 			<h5><strong>J</strong> wie „Jeszcze raz, jeszcze raz“</h5>
 			<p>Das heißt so viel wie „noch einmal, noch einmal”. Das rufen die Gäste im Chor bei dem Lied „Sto lat“, welches
 				sicherlich nicht nur einmal im Laufe des Abends erklingen wird.</p>
@@ -197,8 +199,7 @@
 			<p>Der 25.Buchstabe des deutschen und des polnischen Alphabets. Also wenn das kein Schicksal ist…</p>
 			<h5><strong>Z</strong> wie Zwölf Stunden</h5>
 			<p>Eine durchschnittliche Hochzeitsfeier in Polen dauert zwölf Stunden…</p>
-
-
+			<!-- <img id='single' src="./public/img/couple.jpg" alt="couple"> -->
 		</div>
 	</div>
 	
