--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 					<ul>
 						<li>16 Uhr – Trauung in <a href='https://goo.gl/maps/e14MK8E9sNv' target="_blank">der Kirche St. Bartlomieja in Kuczbork</a></li>
 						<br>
-						<li>18 Uhr – Beginn der Feier in <a href='https://goo.gl/maps/wqnNJYCmaTN2' target="_blank">Palac Slubów DOMINO in Kormoniki</a></li>
+						<li>18 Uhr – Beginn der Feier in <a href='https://goo.gl/maps/wqnNJYCmaTN2' target="_blank">Palac Slubów DOMINO in Komorniki</a></li>
 					</ul>
 				</div>
 				<div class="agenda-day">
